--- a/LendGames.Database/LendGames.Database.csproj
+++ b/LendGames.Database/LendGames.Database.csproj
@@ -54,9 +54,12 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
+    <Compile Include="Models\Friend.cs" />
+    <Compile Include="Models\Game.cs" />
     <Compile Include="Models\Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AccountRepository.cs" />
+    <Compile Include="Repositories\GameRepository.cs" />
     <Compile Include="Repositories\Repository.cs" />
     <Compile Include="Repositories\RepositoryEventArgs.cs" />
   </ItemGroup>
