--- a/LendGames.Utils/LendGames.Utils.csproj
+++ b/LendGames.Utils/LendGames.Utils.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Paging\PagingData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\CryptoService.cs" />
   </ItemGroup>
