--- a/LendGames.Database/LendGames.Database.csproj
+++ b/LendGames.Database/LendGames.Database.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Models\Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AccountRepository.cs" />
+    <Compile Include="Repositories\FriendRepository.cs" />
     <Compile Include="Repositories\GameRepository.cs" />
     <Compile Include="Repositories\Repository.cs" />
     <Compile Include="Repositories\RepositoryEventArgs.cs" />
