--- a/LendGames.Web.MvcApp/LendGames.Web.MvcApp.csproj
+++ b/LendGames.Web.MvcApp/LendGames.Web.MvcApp.csproj
@@ -150,12 +150,14 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Controller.cs" />
+    <Compile Include="Controllers\FriendController.cs" />
     <Compile Include="Controllers\GameController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="HtmlHelperExtensions.cs" />
+    <Compile Include="ViewModels\FriendViewModel.cs" />
     <Compile Include="ViewModels\GameViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequiredConnectionAttribute.cs" />
@@ -185,6 +187,9 @@
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.eot" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\friend\edit.js" />
+    <Content Include="Scripts\friend\index.js" />
+    <Content Include="Scripts\friend\remove.js" />
     <Content Include="Scripts\game\edit.js" />
     <Content Include="Scripts\game\index.js" />
     <Content Include="Scripts\game\remove.js" />
@@ -217,6 +222,10 @@
     <Content Include="Views\Account\Dashboard.cshtml" />
     <Content Include="Views\Game\Edit.cshtml" />
     <Content Include="Views\Game\Remove.cshtml" />
+    <Content Include="Views\Friend\Index.cshtml" />
+    <Content Include="Views\Friend\_FriendsList.cshtml" />
+    <Content Include="Views\Friend\Edit.cshtml" />
+    <Content Include="Views\Friend\Remove.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
