implementação do Dashboard

--- a/LendGames.Web.MvcApp/LendGames.Web.MvcApp.csproj
+++ b/LendGames.Web.MvcApp/LendGames.Web.MvcApp.csproj
@@ -157,6 +157,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="HtmlHelperExtensions.cs" />
+    <Compile Include="ViewModels\DashboardViewModel.cs" />
     <Compile Include="ViewModels\FriendViewModel.cs" />
     <Compile Include="ViewModels\GameViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -193,6 +194,7 @@
     <Content Include="Scripts\game\edit.js" />
     <Content Include="Scripts\game\index.js" />
     <Content Include="Scripts\game\remove.js" />
+    <Content Include="Scripts\home\dashboard.js" />
     <Content Include="Scripts\home\index.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -226,6 +228,7 @@
     <Content Include="Views\Friend\_FriendsList.cshtml" />
     <Content Include="Views\Friend\Edit.cshtml" />
     <Content Include="Views\Friend\Remove.cshtml" />
+    <Content Include="Views\Account\_DashboardInfo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
