--- a/LendGames.Web.MvcApp/LendGames.Web.MvcApp.csproj
+++ b/LendGames.Web.MvcApp/LendGames.Web.MvcApp.csproj
@@ -157,6 +157,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="HtmlHelperExtensions.cs" />
+    <Compile Include="ModelMapper.cs" />
     <Compile Include="ViewModels\AccountViewModel.cs" />
     <Compile Include="ViewModels\ChangePasswordViewModel.cs" />
     <Compile Include="ViewModels\DashboardViewModel.cs" />
@@ -166,6 +167,7 @@
     <Compile Include="RequiredConnectionAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\NoCover.jpg" />
     <Content Include="Assets\Spinner.gif" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -226,7 +228,6 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\PermissionRequired.cshtml" />
     <Content Include="Views\Game\Index.cshtml" />
-    <Content Include="Views\Game\_GamesList.cshtml" />
     <Content Include="Views\Account\Dashboard.cshtml" />
     <Content Include="Views\Game\Edit.cshtml" />
     <Content Include="Views\Game\Remove.cshtml" />
@@ -241,6 +242,7 @@
     <Content Include="Views\Account\Disable.cshtml" />
     <Content Include="Views\Account\Enable.cshtml" />
     <Content Include="Views\Account\ChangePassword.cshtml" />
+    <Content Include="Views\Game\_GamesList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
